--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "dependencies": {
     "@clerk/nextjs": "^6.6.0",
     "axios": "^1.7.9",
+    "better-sqlite3": "^11.7.0",
     "clsx": "^2.1.1",
+    "drizzle-kit": "^0.30.1",
+    "drizzle-orm": "^0.38.3",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -22,6 +25,7 @@
     "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
