--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "format": "prettier --write --list-different .",
     "prepare": "husky",
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "import-data": "tsx ./src/db/importData.ts"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.6.0",
@@ -21,8 +22,10 @@
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "stream-json": "^1.9.1",
     "superstruct": "^2.0.2",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "tsx": "^4.19.2"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.12",
