--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-icons": "^5.4.0",
     "rough-notation": "^0.5.1",
     "superstruct": "^2.0.2",
     "tailwind-merge": "^2.5.5"
