--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@clerk/nextjs": "^6.6.0",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.17.0",
     "next": "15.1.3",
     "react": "19.0.0",
     "react-dom": "19.0.0",
