--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "axios": "^1.7.9",
     "better-sqlite3": "^11.7.0",
     "clsx": "^2.1.1",
-    "drizzle-kit": "^0.30.1",
     "drizzle-orm": "^0.38.3",
-    "stream-json": "^1.9.1",
     "framer-motion": "^11.17.0",
     "next": "15.1.3",
     "react": "19.0.0",
@@ -28,10 +26,12 @@
     "react-icons": "^5.4.0",
     "rough-notation": "^0.5.1",
     "superstruct": "^2.0.2",
-    "tailwind-merge": "^2.5.5",
-    "tsx": "^4.19.2"
+    "tailwind-merge": "^2.5.5"
   },
   "devDependencies": {
+    "tsx": "^4.19.2",
+    "drizzle-kit": "^0.30.1",
+    "stream-json": "^1.9.1",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20",
     "@types/react": "19.0.2",
