--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "prettier --write --list-different .",
     "prepare": "husky",
     "pre-commit": "lint-staged",
-    "import-data": "tsx ./src/db/import_data.ts"
+    "import-data": "tsx ./src/data/__port-data.ts",
+    "db:push": "npx drizzle-kit push"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.6.0",
@@ -32,6 +33,10 @@
     "@types/node": "^20",
     "@types/react": "19.0.2",
     "@types/react-dom": "19.0.2",
+    "@types/stream-chain": "^2.1.0",
+    "@types/stream-json": "^1.7.8",
+    "consola": "^3.3.3",
+    "dotenv": "^16.4.7",
     "drizzle-kit": "^0.30.1",
     "eslint": "^8",
     "eslint-config-next": "15.1.3",
