--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.5.5"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-motion": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
