fix: resolve edit timeout

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "NODE_OPTIONS='--network-family-autoselection-attempt-timeout=500' next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_OPTIONS='--network-family-autoselection-attempt-timeout=5000' next start",
     "lint": "next lint",
     "format": "prettier --write --list-different .",
     "prepare": "husky",
